UI change: padding added in headline

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -127,7 +127,7 @@
       <!-- Headline -->
       <h1 class="text-4xl sm:text-5xl lg:text-6xl xl:text-7xl font-bold text-slate-900 tracking-tight leading-[1.1] mb-6 opacity-0 animate-fade-in-up" style="animation-delay: 200ms; animation-fill-mode: forwards;">
         Master the Art of
-        <span class="block mt-2 text-gradient">Argumentation</span>
+        <span class="block py-2 text-gradient">Argumentation</span>
       </h1>
 
       <!-- Subheadline -->
