landing page name and logo changed

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -5,20 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <!-- SEO -->
-  <title>discourse.ai — AI-Powered Speech Analysis & Feedback</title>
+  <title>Cortify.ai — AI-Powered Speech Analysis & Feedback</title>
   <meta name="description" content="Develop critical thinking and analytical skills with AI-powered feedback on your speeches and presentations. Get real-time, fact-based analysis to become a more effective communicator.">
   <meta name="keywords" content="speech analysis, AI feedback, critical thinking, presentation skills, fact-checking, communication, public speaking">
   
   <!-- Open Graph -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://discourse.ai">
-  <meta property="og:title" content="discourse.ai — AI-Powered Speech Analysis & Feedback">
+  <meta property="og:url" content="https://cortify.ai">
+  <meta property="og:title" content="cortify.ai — AI-Powered Speech Analysis & Feedback">
   <meta property="og:description" content="Develop critical thinking with AI-powered feedback on your speeches and presentations.">
   <meta property="og:image" content="/images/og-image.png">
   
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="discourse.ai — AI-Powered Speech Analysis & Feedback">
+  <meta name="twitter:title" content="cortify.ai — AI-Powered Speech Analysis & Feedback">
   <meta name="twitter:description" content="Develop critical thinking with AI-powered feedback on your speeches and presentations.">
   
   <!-- Favicon -->
@@ -41,10 +41,10 @@
         
         <!-- Logo -->
         <a href="/" class="flex items-center gap-2.5 group">
-          <div class="w-9 h-9 bg-gradient-to-br from-brand-500 to-brand-600 rounded-xl flex items-center justify-center shadow-lg shadow-brand-500/20 group-hover:shadow-brand-500/40 transition-all duration-300">
-            <span class="text-white font-bold">d.</span>
+          <div class="w-10 h-10  rounded-xl flex items-center justify-center  transition-all xduration-300">
+            <img src="./public/images/cortify.svg" alt="logo">
           </div>
-          <span class="text-xl font-bold text-slate-900">discourse<span class="text-brand-600">.ai</span></span>
+          <span class="text-xl font-bold text-slate-900">cortify<span class="text-brand-600">.ai</span></span>
         </a>
 
         <!-- Desktop Navigation -->
@@ -187,7 +187,7 @@
                 <div class="w-3 h-3 rounded-full bg-emerald-400 hover:bg-emerald-500 transition-colors cursor-pointer"></div>
               </div>
               <div class="flex-1 text-center">
-                <span class="text-xs text-slate-400 font-medium">discourse.ai — Analysis Session</span>
+                <span class="text-xs text-slate-400 font-medium">cortify.ai — Analysis Session</span>
               </div>
             </div>
             <!-- Placeholder for app screenshot -->
@@ -441,7 +441,7 @@
           <span class="step-number">1</span>
           <h3 class="text-xl font-bold text-slate-900 mt-3 mb-3">Download the App</h3>
           <p class="text-slate-600 leading-relaxed">
-            Get discourse.ai free for Windows. macOS and Linux coming soon.
+            Get cortify.ai free for Windows. macOS and Linux coming soon.
           </p>
         </div>
 
@@ -630,7 +630,7 @@
         <div class="flex flex-col sm:flex-row gap-4 justify-center mb-8" data-animate="fade-in-up" data-delay="400">
           <!-- Windows - AVAILABLE -->
           <a 
-            href="./public/downloads/Discourse-AI-Windows.zip" 
+            href="./public/downloads/Cortify-AI-Windows.zip" 
             class="btn-download group" 
             data-platform="windows"
           >
@@ -672,7 +672,7 @@
         <!-- File info -->
         <div class="text-sm text-slate-500 space-y-2" data-animate="fade-in-up" data-delay="500">
           <p>
-            <strong class="text-slate-700">Windows:</strong> 214 MB • ZIP archive • Extract and run <code class="bg-slate-100 px-1.5 py-0.5 rounded text-xs">Discourse AI.exe</code>
+            <strong class="text-slate-700">Windows:</strong> 214 MB • ZIP archive • Extract and run <code class="bg-slate-100 px-1.5 py-0.5 rounded text-xs">Cortify AI.exe</code>
           </p>
           <p>
             Requires Windows 10+ (64-bit) • 4GB RAM minimum • 500MB free disk space
@@ -687,7 +687,7 @@
             </svg>
             <div class="text-left">
               <p class="font-medium text-amber-900">Beta Release</p>
-              <p class="mt-1">This is a beta version for testing. Some features may be incomplete. Found a bug? <a href="https://github.com/DiscourseAiOrgs/Discourse_frontend/issues" target="_blank" rel="noopener" class="underline hover:text-amber-900">Report it here</a>.</p>
+              <p class="mt-1">This is a beta version for testing. Some features may be incomplete. Found a bug? <a href="https://github.com/CortifyAiOrgs/Cortify_frontend/issues" target="_blank" rel="noopener" class="underline hover:text-amber-900">Report it here</a>.</p>
             </div>
           </div>
         </div>
@@ -702,10 +702,10 @@
         <!-- Logo & Status -->
         <div class="col-span-2 md:col-span-1">
           <a href="/" class="flex items-center gap-2.5 mb-4 group">
-            <div class="w-9 h-9 bg-gradient-to-br from-brand-500 to-brand-600 rounded-xl flex items-center justify-center shadow-lg shadow-brand-500/20 group-hover:shadow-brand-500/40 transition-all">
-              <span class="text-white font-bold">d.</span>
+            <div class="w-10 h-10  rounded-xl flex items-center justify-center  transition-all">
+              <img src="./public/images/cortify.svg" alt="logo">
             </div>
-            <span class="text-xl font-bold text-slate-900">discourse<span class="text-brand-600">.ai</span></span>
+            <span class="text-xl font-bold text-slate-900">cortify<span class="text-brand-600">.ai</span></span>
           </a>
           <p class="text-sm text-slate-500 mb-4 leading-relaxed">
             Develop critical thinking and analytical skills with AI-powered feedback.
@@ -753,12 +753,12 @@
       <!-- Bottom bar -->
       <div class="pt-8 border-t border-slate-100 flex flex-col sm:flex-row justify-between items-center gap-4">
         <p class="text-sm text-slate-500">
-          © 2024 discourse.ai. All rights reserved.
+          © 2024 cortify.ai. All rights reserved.
         </p>
         
         <!-- Social links -->
         <div class="flex items-center gap-1">
-          <a href="https://github.com/DiscourseAiOrgs" target="_blank" rel="noopener" class="p-2 text-slate-400 hover:text-slate-600 hover:bg-slate-100 rounded-lg transition-all" aria-label="GitHub">
+          <a href="https://github.com/CortifyAiOrgs" target="_blank" rel="noopener" class="p-2 text-slate-400 hover:text-slate-600 hover:bg-slate-100 rounded-lg transition-all" aria-label="GitHub">
             <svg class="w-5 h-5" viewBox="0 0 24 24" fill="currentColor">
               <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
             </svg>
