--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -27,7 +27,7 @@
   <!-- Styles -->
   <link rel="stylesheet" href="/src/styles/main.css">
 </head>
-<body class="bg-dark text-white antialiased">
+<body class="bg-dark antialiased">
 
   <!-- ==================== NAVIGATION ==================== -->
   <nav class="fixed top-0 left-0 right-0 z-50 bg-dark/80 backdrop-blur-xl border-b border-white/5">
@@ -37,18 +37,36 @@
         <!-- Logo -->
         <a href="/" class="flex items-center gap-2">
           <img src="/images/cortify.svg" alt="Cortify" class="h-8 w-auto">
-          <span class="text-xl font-semibold text-white">Cortify</span>
+          <span class="text-xl font-semibold text-theme-primary">Cortify</span>
         </a>
 
         <!-- Desktop Navigation -->
         <div class="hidden md:flex items-center gap-8">
-          <a href="#features" class="text-sm text-gray-400 hover:text-white transition-colors">Features</a>
-          <a href="#pricing" class="text-sm text-gray-400 hover:text-white transition-colors">Pricing</a>
-          <a href="#about" class="text-sm text-gray-400 hover:text-white transition-colors">About Us</a>
+          <a href="#features" class="text-sm text-theme-secondary hover:text-theme-primary transition-colors">Features</a>
+          <a href="#pricing" class="text-sm text-theme-secondary hover:text-theme-primary transition-colors">Pricing</a>
+          <a href="#about" class="text-sm text-theme-secondary hover:text-theme-primary transition-colors">About Us</a>
         </div>
 
         <!-- Desktop CTA -->
         <div class="hidden md:flex items-center gap-3">
+          <!-- Theme Toggle Button -->
+          <button id="theme-toggle" class="p-2 rounded-lg transition-colors" style="background-color: var(--bg-tertiary);" aria-label="Toggle theme">
+            <svg id="theme-icon-dark" class="w-5 h-5 text-theme-secondary" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/>
+            </svg>
+            <svg id="theme-icon-light" class="w-5 h-5 text-theme-secondary hidden" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <circle cx="12" cy="12" r="5"/>
+              <line x1="12" y1="1" x2="12" y2="3"/>
+              <line x1="12" y1="21" x2="12" y2="23"/>
+              <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/>
+              <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/>
+              <line x1="1" y1="12" x2="3" y2="12"/>
+              <line x1="21" y1="12" x2="23" y2="12"/>
+              <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/>
+              <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/>
+            </svg>
+          </button>
+
           <a href="#download" class="btn-primary-blue">
             <svg class="w-4 h-4" viewBox="0 0 24 24" fill="currentColor">
               <path d="M3 5.5l7.5-1v7.25H3V5.5zm0 13l7.5 1v-7.25H3V18.5zm8.5 1.25l9.5 1.25v-9.25h-9.5v8zm0-16.5v8h9.5V3L11.5 3.25z"/>
@@ -77,11 +95,11 @@
 
         <!-- Left Content -->
         <div class="text-left">
-          <h1 class="text-5xl sm:text-6xl lg:text-7xl font-bold text-white leading-[1.1] mb-6">
+          <h1 class="text-5xl sm:text-6xl lg:text-7xl font-bold text-theme-primary leading-[1.1] mb-6">
             Decode the<br>Unspoken
           </h1>
 
-          <p class="text-lg text-gray-400 max-w-lg mb-8 leading-relaxed">
+          <p class="text-lg text-theme-secondary max-w-lg mb-8 leading-relaxed">
             The world's first communication intelligence platform. Analyze any conversation in real-time, practice with AI coaches, and master the art of persuasion.
           </p>
 
@@ -102,40 +120,40 @@
     </div>
 
     <!-- Platform Integration Bar -->
-    <div class="mt-8 border-t border-white/10 bg-dark/50">
+    <div class="mt-8 border-t bg-dark/50" style="border-color: var(--border-primary); background-color: var(--bg-secondary);">
       <div class="max-w-7xl mx-auto px-6 lg:px-8 py-5">
         <div class="flex items-center gap-8 overflow-x-auto scrollbar-hide">
           <div class="h-px w-16 bg-gradient-to-r from-blue-500 to-transparent flex-shrink-0"></div>
 
-          <div class="flex items-center gap-2 text-gray-500 flex-shrink-0">
+          <div class="flex items-center gap-2 text-theme-tertiary flex-shrink-0">
             <svg class="w-5 h-5 text-red-500" viewBox="0 0 24 24" fill="currentColor">
               <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
             </svg>
             <span class="text-sm font-medium">YouTube</span>
           </div>
 
-          <div class="flex items-center gap-2 text-gray-500 flex-shrink-0">
+          <div class="flex items-center gap-2 text-theme-tertiary flex-shrink-0">
             <svg class="w-5 h-5 text-blue-400" viewBox="0 0 24 24" fill="currentColor">
               <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
             </svg>
             <span class="text-sm font-medium">Zoom</span>
           </div>
 
-          <div class="flex items-center gap-2 text-gray-500 flex-shrink-0">
+          <div class="flex items-center gap-2 text-theme-tertiary flex-shrink-0">
             <svg class="w-5 h-5 text-green-500" viewBox="0 0 24 24" fill="currentColor">
               <path d="M12 0C5.372 0 0 5.373 0 12s5.372 12 12 12 12-5.373 12-12S18.628 0 12 0zm5.82 16.32c-.193.39-.588.65-1.03.65H7.21c-.442 0-.837-.26-1.03-.65L4.5 12l1.68-4.32c.193-.39.588-.65 1.03-.65h9.58c.442 0 .837.26 1.03.65L19.5 12l-1.68 4.32z"/>
             </svg>
             <span class="text-sm font-medium">Google Meet</span>
           </div>
 
-          <div class="flex items-center gap-2 text-gray-500 flex-shrink-0">
+          <div class="flex items-center gap-2 text-theme-tertiary flex-shrink-0">
             <svg class="w-5 h-5 text-purple-500" viewBox="0 0 24 24" fill="currentColor">
               <path d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0 12.64 12.64 0 0 0-.617-1.25.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057 19.9 19.9 0 0 0 5.993 3.03.078.078 0 0 0 .084-.028c.462-.63.874-1.295 1.226-1.994a.076.076 0 0 0-.041-.106 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 1-.008-.128 10.2 10.2 0 0 0 .372-.292.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.198.373.292a.077.077 0 0 1-.006.127 12.299 12.299 0 0 1-1.873.892.077.077 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028 19.839 19.839 0 0 0 6.002-3.03.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03z"/>
             </svg>
             <span class="text-sm font-medium">Podcasts</span>
           </div>
 
-          <div class="flex items-center gap-2 text-gray-500 flex-shrink-0">
+          <div class="flex items-center gap-2 text-theme-tertiary flex-shrink-0">
             <svg class="w-5 h-5 text-blue-500" viewBox="0 0 24 24" fill="currentColor">
               <path d="M12.545,10.239v3.821h5.445c-0.712,2.315-2.647,3.972-5.445,3.972c-3.332,0-6.033-2.701-6.033-6.032s2.701-6.032,6.033-6.032c1.498,0,2.866,0.549,3.921,1.453l2.814-2.814C17.503,2.988,15.139,2,12.545,2C7.021,2,2.543,6.477,2.543,12s4.478,10,10.002,10c8.396,0,10.249-7.85,9.426-11.748L12.545,10.239z"/>
             </svg>
@@ -162,8 +180,8 @@
               <circle cx="12" cy="12" r="2"/>
             </svg>
           </div>
-          <h3 class="text-xl font-semibold text-white mb-3">Cortify</h3>
-          <p class="text-gray-500 text-sm leading-relaxed">
+          <h3 class="text-xl font-semibold text-theme-primary mb-3">Cortify</h3>
+          <p class="text-theme-secondary text-sm leading-relaxed">
             X-ray vision for any conversation. Overlay on YouTube, meetings, or podcasts and detect persuasion techniques in real-time. See what others miss.
           </p>
         </div>
@@ -178,8 +196,8 @@
               <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
             </svg>
           </div>
-          <h3 class="text-xl font-semibold text-white mb-3">Live Arena</h3>
-          <p class="text-gray-500 text-sm leading-relaxed">
+          <h3 class="text-xl font-semibold text-theme-primary mb-3">Live Arena</h3>
+          <p class="text-theme-secondary text-sm leading-relaxed">
             Compete in real-time debates with humans or AI. Use technique cards strategically while AI moderates, scores, and helps you improve.
           </p>
         </div>
@@ -191,8 +209,8 @@
               <path d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z"/>
             </svg>
           </div>
-          <h3 class="text-xl font-semibold text-white mb-3">AI Coach</h3>
-          <p class="text-gray-500 text-sm leading-relaxed">
+          <h3 class="text-xl font-semibold text-theme-primary mb-3">AI Coach</h3>
+          <p class="text-theme-secondary text-sm leading-relaxed">
             Practice with AI opponents in simulated scenarios. Sales calls, negotiations, interviews - get instant feedback and level up your communication skills.
           </p>
         </div>
@@ -201,12 +219,12 @@
   </section>
 
   <!-- ==================== FOOTER / WAITLIST ==================== -->
-  <footer id="waitlist" class="py-16 bg-dark border-t border-white/5">
+  <footer id="waitlist" class="py-16 bg-dark border-t" style="border-color: var(--border-primary);">
     <div class="max-w-7xl mx-auto px-6 lg:px-8">
 
       <!-- Coming Soon Message -->
       <div class="text-center mb-10">
-        <p class="text-gray-400 text-sm">
+        <p class="text-theme-secondary text-sm">
           Mastery isn't just for Windows. We're coming to macOS & Mobile soon.
         </p>
       </div>
@@ -228,14 +246,14 @@
 
       <!-- Copyright -->
       <div class="text-center">
-        <p class="text-gray-600 text-sm">
+        <p class="text-theme-tertiary text-sm">
           &copy; 2026 Cortify. All rights reserved.
         </p>
       </div>
 
       <!-- Decorative Star -->
       <div class="fixed bottom-8 right-8 opacity-20">
-        <svg class="w-12 h-12 text-gray-500" viewBox="0 0 24 24" fill="currentColor">
+        <svg class="w-12 h-12 text-theme-tertiary" viewBox="0 0 24 24" fill="currentColor">
           <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
         </svg>
       </div>
