--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -36,7 +36,7 @@
     ║  1. Navigation   - Fixed header with logo & CTAs         ║
     ║  2. Hero         - Main headline + product image         ║
     ║  3. Integrations - Platform logos bar                    ║
-    ║  4. Stats        - Animated counter section              ║
+    ║  4. Stats        - Animated counter section =  in commentout           ║
     ║  5. Features     - 3-column feature cards                ║
     ║  6. Footer       - Waitlist form + copyright             ║
     ╚══════════════════════════════════════════════════════════╝
@@ -178,11 +178,10 @@
   </section>
 
   <!-- ==================== STATS SECTION ==================== -->
-  <section class="py-16 lg:py-20 bg-dark">
+  <!-- <section class="py-16 lg:py-20 bg-dark">
     <div class="max-w-7xl mx-auto px-6 lg:px-8">
       <div class="grid md:grid-cols-3 gap-8 text-center">
 
-        <!-- Stat 1 -->
         <div class="stats-item opacity-0">
           <div class="text-4xl lg:text-5xl font-bold text-gradient-animate mb-2">
             <span class="counter" data-target="50000">0</span>+
@@ -190,7 +189,6 @@
           <p class="text-theme-secondary text-sm">Conversations Analyzed</p>
         </div>
 
-        <!-- Stat 2 -->
         <div class="stats-item opacity-0">
           <div class="text-4xl lg:text-5xl font-bold text-gradient-animate mb-2">
             <span class="counter" data-target="95">0</span>%
@@ -198,7 +196,6 @@
           <p class="text-theme-secondary text-sm">Accuracy Rate</p>
         </div>
 
-        <!-- Stat 3 -->
         <div class="stats-item opacity-0">
           <div class="text-4xl lg:text-5xl font-bold text-gradient-animate mb-2">
             <span class="counter" data-target="1200">0</span>+
@@ -208,7 +205,7 @@
 
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- ==================== FEATURES SECTION ==================== -->
   <section id="features" class="py-16 lg:py-20 bg-dark">
