--- a/index.html
+++ b/index.html
@@ -43,36 +43,47 @@
   -->
 
   <!-- ==================== NAVIGATION ==================== -->
-  <nav class="fixed top-0 left-0 right-0 z-50 backdrop-blur-xl border-b" style="background: rgba(10, 14, 26, 0.8); border-color: var(--border-primary);">
+  <nav class="fixed top-0 left-0 right-0 z-50 backdrop-blur-2xl border-b" style="background: rgba(10, 14, 26, 0.85); border-color: rgba(99, 102, 241, 0.1); box-shadow: 0 4px 24px rgba(0, 0, 0, 0.1);">
     <div class="max-w-7xl mx-auto px-6 lg:px-8">
       <div class="flex items-center justify-between h-20">
 
-        <!-- Logo -->
-        <a href="/" class="flex items-center gap-3 group">
-          <img src="/images/cortify.svg" alt="Cortify" class="h-9 w-auto group-hover:scale-110 transition-transform">
-          <span class="text-2xl font-bold text-theme-primary">Cortify</span>
+        <!-- Logo with Gradient Accent -->
+        <a href="/" class="flex items-center gap-3 group relative">
+          <div class="relative">
+            <div class="absolute -inset-2 rounded-xl opacity-0 group-hover:opacity-100 transition-opacity duration-300 blur-lg" style="background: linear-gradient(135deg, var(--accent-primary), var(--accent-secondary));"></div>
+            <img src="/images/cortify.svg" alt="Cortify" class="h-10 w-auto relative z-10 group-hover:scale-110 transition-transform duration-300">
+          </div>
+          <span class="text-2xl font-bold relative">
+            <span class="absolute inset-0 blur-sm opacity-0 group-hover:opacity-50 transition-opacity duration-300" style="background: linear-gradient(135deg, var(--accent-primary), var(--accent-secondary)); background-clip: text; -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Cortify</span>
+            <span class="relative text-theme-primary">Cortify</span>
+          </span>
         </a>
 
-        <!-- Desktop Navigation -->
-        <div class="hidden md:flex items-center gap-10">
-          <a href="#features" class="text-sm font-medium text-theme-secondary hover:text-theme-primary transition-colors relative group">
-            Features
-            <span class="absolute -bottom-6 left-0 w-0 h-0.5 group-hover:w-full transition-all duration-300" style="background: var(--accent-primary);"></span>
+        <!-- Desktop Navigation with Pills -->
+        <div class="hidden md:flex items-center gap-2 px-3 py-2 rounded-full" style="background: rgba(26, 31, 46, 0.5); border: 1px solid var(--border-primary);">
+          <a href="#features" class="px-5 py-2 text-sm font-medium rounded-full transition-all duration-300 relative group" style="color: var(--text-secondary);">
+            <span class="relative z-10">Features</span>
+            <div class="absolute inset-0 rounded-full opacity-0 group-hover:opacity-100 transition-opacity duration-300" style="background: linear-gradient(135deg, rgba(99, 102, 241, 0.15), rgba(6, 182, 212, 0.15));"></div>
           </a>
-          <a href="#pricing" class="text-sm font-medium text-theme-secondary hover:text-theme-primary transition-colors relative group">
-            Pricing
-            <span class="absolute -bottom-6 left-0 w-0 h-0.5 group-hover:w-full transition-all duration-300" style="background: var(--accent-primary);"></span>
+          <a href="#pricing" class="px-5 py-2 text-sm font-medium rounded-full transition-all duration-300 relative group" style="color: var(--text-secondary);">
+            <span class="relative z-10">Pricing</span>
+            <div class="absolute inset-0 rounded-full opacity-0 group-hover:opacity-100 transition-opacity duration-300" style="background: linear-gradient(135deg, rgba(99, 102, 241, 0.15), rgba(6, 182, 212, 0.15));"></div>
+          </a>
+          <a href="#about" class="px-5 py-2 text-sm font-medium rounded-full transition-all duration-300 relative group" style="color: var(--text-secondary);">
+            <span class="relative z-10">About</span>
+            <div class="absolute inset-0 rounded-full opacity-0 group-hover:opacity-100 transition-opacity duration-300" style="background: linear-gradient(135deg, rgba(99, 102, 241, 0.15), rgba(6, 182, 212, 0.15));"></div>
           </a>
         </div>
 
-        <!-- Desktop CTA -->
-        <div class="hidden md:flex items-center gap-4">
-          <!-- Theme Toggle Button -->
-          <button id="theme-toggle" class="p-2.5 rounded-xl transition-all hover:scale-110" style="background-color: var(--bg-tertiary);" aria-label="Toggle theme">
-            <svg id="theme-icon-dark" class="w-5 h-5 text-theme-secondary" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+        <!-- Desktop CTA with Enhanced Styling -->
+        <div class="hidden md:flex items-center gap-3">
+          <!-- Theme Toggle Button with Glow -->
+          <button id="theme-toggle" class="relative p-3 rounded-xl transition-all duration-300 hover:scale-110 group" style="background: linear-gradient(135deg, rgba(26, 31, 46, 0.8), rgba(19, 23, 38, 0.8)); border: 1px solid var(--border-primary);" aria-label="Toggle theme">
+            <div class="absolute inset-0 rounded-xl opacity-0 group-hover:opacity-100 transition-opacity duration-300 blur-md" style="background: linear-gradient(135deg, var(--accent-primary), var(--accent-secondary));"></div>
+            <svg id="theme-icon-dark" class="w-5 h-5 relative z-10 transition-colors" style="color: var(--text-secondary);" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/>
             </svg>
-            <svg id="theme-icon-light" class="w-5 h-5 text-theme-secondary hidden" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <svg id="theme-icon-light" class="w-5 h-5 relative z-10 hidden transition-colors" style="color: var(--text-secondary);" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <circle cx="12" cy="12" r="5"/>
               <line x1="12" y1="1" x2="12" y2="3"/>
               <line x1="12" y1="21" x2="12" y2="23"/>
@@ -85,14 +96,19 @@
             </svg>
           </button>
 
-          <a href="#waitlist" class="px-6 py-2.5 text-sm font-semibold rounded-xl transition-all hover:scale-105" style="background: var(--accent-primary); color: white; box-shadow: 0 4px 14px var(--accent-primary-glow);">
-            Join Waitlist
+          <!-- Enhanced CTA Button -->
+          <a href="#waitlist" class="group relative px-6 py-3 text-sm font-semibold rounded-xl transition-all duration-300 hover:scale-105 inline-flex items-center gap-2 overflow-hidden" style="background: linear-gradient(135deg, #6366f1 0%, #06b6d4 100%); color: white; box-shadow: 0 8px 20px -4px rgba(99, 102, 241, 0.6);">
+            <span class="relative z-10">Join Waitlist</span>
+            <svg class="w-4 h-4 relative z-10 group-hover:translate-x-1 transition-transform duration-200" fill="none" stroke="currentColor" stroke-width="2.5" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M13 7l5 5m0 0l-5 5m5-5H6"/>
+            </svg>
+            <div class="absolute inset-0 opacity-0 group-hover:opacity-100 transition-opacity duration-300" style="background: linear-gradient(135deg, #7c3aed 0%, #0891b2 100%);"></div>
           </a>
         </div>
 
-        <!-- Mobile Menu Button -->
-        <button id="mobile-menu-button" class="md:hidden p-2 text-gray-400 hover:text-white">
-          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+        <!-- Mobile Menu Button with Gradient -->
+        <button id="mobile-menu-button" class="md:hidden p-2.5 rounded-xl transition-all duration-300 hover:scale-110" style="background: rgba(26, 31, 46, 0.5); border: 1px solid var(--border-primary);">
+          <svg class="w-6 h-6" style="color: var(--text-secondary);" fill="none" stroke="currentColor" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/>
           </svg>
         </button>
@@ -187,33 +203,76 @@
         </div>
       </div>
 
-      <!-- Platform Bar -->
-      <div class="mt-28 pt-10 border-t animate-fade-in-up" style="border-color: var(--border-primary); animation-delay: 0.6s;">
-        <p class="text-center text-sm text-theme-tertiary mb-9 font-medium opacity-70">Works seamlessly with your favorite tools</p>
-        <div class="flex flex-wrap items-center justify-center gap-10">
-          <div class="flex items-center gap-2.5 text-theme-tertiary opacity-50 hover:opacity-100 transition-opacity cursor-default">
-            <svg class="w-6 h-6 text-red-500" viewBox="0 0 24 24" fill="currentColor">
-              <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
+      <!-- Platform Bar - Enhanced Design -->
+      <div class="mt-32 pt-12 relative animate-fade-in-up" style="animation-delay: 0.6s;">
+        <!-- Gradient Border Top -->
+        <div class="absolute top-0 left-1/2 -translate-x-1/2 w-full max-w-4xl h-px" style="background: linear-gradient(90deg, transparent 0%, var(--accent-primary) 30%, var(--accent-secondary) 70%, transparent 100%);"></div>
+
+        <!-- Badge Label -->
+        <div class="flex justify-center mb-12">
+          <div class="inline-flex items-center gap-2 px-4 py-2 rounded-full" style="background: linear-gradient(135deg, rgba(99, 102, 241, 0.1), rgba(6, 182, 212, 0.1)); border: 1px solid var(--border-primary);">
+            <svg class="w-4 h-4" style="color: var(--accent-secondary);" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"/>
             </svg>
-            <span class="text-sm font-semibold">YouTube</span>
+            <span class="text-xs font-semibold tracking-wide uppercase" style="color: var(--text-tertiary);">Seamless Integrations</span>
           </div>
-          <div class="flex items-center gap-2.5 text-theme-tertiary opacity-50 hover:opacity-100 transition-opacity cursor-default">
-            <svg class="w-6 h-6 text-blue-400" viewBox="0 0 24 24" fill="currentColor">
-              <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
-            </svg>
-            <span class="text-sm font-semibold">Zoom</span>
+        </div>
+
+        <!-- Platform Icons Grid -->
+        <div class="flex flex-wrap items-center justify-center gap-6 lg:gap-8">
+          <!-- YouTube -->
+          <div class="group relative">
+            <div class="absolute -inset-3 rounded-2xl opacity-0 group-hover:opacity-100 transition-all duration-300 blur-xl" style="background: linear-gradient(135deg, #ff0000, #ff6b6b);"></div>
+            <div class="relative flex items-center gap-3 px-6 py-4 rounded-xl transition-all duration-300 group-hover:scale-105" style="background: rgba(26, 31, 46, 0.5); border: 1px solid var(--border-primary); backdrop-filter: blur(10px);">
+              <svg class="w-7 h-7 text-red-500 transition-transform duration-300 group-hover:scale-110" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
+              </svg>
+              <span class="text-sm font-semibold transition-colors duration-300" style="color: var(--text-secondary);">YouTube</span>
+            </div>
           </div>
-          <div class="flex items-center gap-2.5 text-theme-tertiary opacity-50 hover:opacity-100 transition-opacity cursor-default">
-            <svg class="w-6 h-6 text-green-500" viewBox="0 0 24 24" fill="currentColor">
-              <path d="M12 0C5.372 0 0 5.373 0 12s5.372 12 12 12 12-5.373 12-12S18.628 0 12 0zm5.82 16.32c-.193.39-.588.65-1.03.65H7.21c-.442 0-.837-.26-1.03-.65L4.5 12l1.68-4.32c.193-.39.588-.65 1.03-.65h9.58c.442 0 .837.26 1.03.65L19.5 12l-1.68 4.32z"/>
-            </svg>
-            <span class="text-sm font-semibold">Meet</span>
+
+          <!-- Zoom -->
+          <div class="group relative">
+            <div class="absolute -inset-3 rounded-2xl opacity-0 group-hover:opacity-100 transition-all duration-300 blur-xl" style="background: linear-gradient(135deg, #2d8cff, #0b5cff);"></div>
+            <div class="relative flex items-center gap-3 px-6 py-4 rounded-xl transition-all duration-300 group-hover:scale-105" style="background: rgba(26, 31, 46, 0.5); border: 1px solid var(--border-primary); backdrop-filter: blur(10px);">
+              <svg class="w-7 h-7 text-blue-500 transition-transform duration-300 group-hover:scale-110" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M5.033 13.9a.743.743 0 0 1-.745-.743V8.608c0-.41.333-.743.745-.743h5.763c.411 0 .744.333.744.743v4.549c0 .41-.333.743-.744.743H5.033zm8.837 2.365a.743.743 0 0 1-.745-.743v-8.11c0-.41.334-.743.745-.743h5.763c.411 0 .745.333.745.743v8.11c0 .41-.334.743-.745.743H13.87z"/>
+              </svg>
+              <span class="text-sm font-semibold transition-colors duration-300" style="color: var(--text-secondary);">Zoom</span>
+            </div>
           </div>
-          <div class="flex items-center gap-2.5 text-theme-tertiary opacity-50 hover:opacity-100 transition-opacity cursor-default">
-            <svg class="w-6 h-6 text-indigo-400" viewBox="0 0 24 24" fill="currentColor">
-              <path d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0 12.64 12.64 0 0 0-.617-1.25.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057 19.9 19.9 0 0 0 5.993 3.03.078.078 0 0 0 .084-.028c.462-.63.874-1.295 1.226-1.994a.076.076 0 0 0-.041-.106 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 1-.008-.128 10.2 10.2 0 0 0 .372-.292.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.198.373.292a.077.077 0 0 1-.006.127 12.299 12.299 0 0 1-1.873.892.077.077 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028 19.839 19.839 0 0 0 6.002-3.03.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03z"/>
-            </svg>
-            <span class="text-sm font-semibold">Discord</span>
+
+          <!-- Google Meet -->
+          <div class="group relative">
+            <div class="absolute -inset-3 rounded-2xl opacity-0 group-hover:opacity-100 transition-all duration-300 blur-xl" style="background: linear-gradient(135deg, #00e676, #00c853);"></div>
+            <div class="relative flex items-center gap-3 px-6 py-4 rounded-xl transition-all duration-300 group-hover:scale-105" style="background: rgba(26, 31, 46, 0.5); border: 1px solid var(--border-primary); backdrop-filter: blur(10px);">
+              <svg class="w-7 h-7 text-green-500 transition-transform duration-300 group-hover:scale-110" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M12 0C5.372 0 0 5.373 0 12s5.372 12 12 12 12-5.373 12-12S18.628 0 12 0zm5.82 16.32c-.193.39-.588.65-1.03.65H7.21c-.442 0-.837-.26-1.03-.65L4.5 12l1.68-4.32c.193-.39.588-.65 1.03-.65h9.58c.442 0 .837.26 1.03.65L19.5 12l-1.68 4.32z"/>
+              </svg>
+              <span class="text-sm font-semibold transition-colors duration-300" style="color: var(--text-secondary);">Meet</span>
+            </div>
+          </div>
+
+          <!-- Microsoft Teams -->
+          <div class="group relative">
+            <div class="absolute -inset-3 rounded-2xl opacity-0 group-hover:opacity-100 transition-all duration-300 blur-xl" style="background: linear-gradient(135deg, #6264a7, #464eb8);"></div>
+            <div class="relative flex items-center gap-3 px-6 py-4 rounded-xl transition-all duration-300 group-hover:scale-105" style="background: rgba(26, 31, 46, 0.5); border: 1px solid var(--border-primary); backdrop-filter: blur(10px);">
+              <svg class="w-7 h-7 text-indigo-500 transition-transform duration-300 group-hover:scale-110" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M19.198 10.875c-.87 0-1.585.71-1.585 1.585v3.17c0 .875.715 1.585 1.585 1.585.875 0 1.585-.71 1.585-1.585v-3.17c0-.875-.71-1.585-1.585-1.585zm-5.425 4.905c-.875 0-1.585-.71-1.585-1.585v-3.17c0-.875.71-1.585 1.585-1.585.87 0 1.585.71 1.585 1.585v3.17c0 .875-.715 1.585-1.585 1.585zM5 0C2.25 0 0 2.25 0 5v14c0 2.75 2.25 5 5 5h14c2.75 0 5-2.25 5-5V5c0-2.75-2.25-5-5-5H5z"/>
+              </svg>
+              <span class="text-sm font-semibold transition-colors duration-300" style="color: var(--text-secondary);">Teams</span>
+            </div>
+          </div>
+
+          <!-- Discord -->
+          <div class="group relative">
+            <div class="absolute -inset-3 rounded-2xl opacity-0 group-hover:opacity-100 transition-all duration-300 blur-xl" style="background: linear-gradient(135deg, #5865f2, #7289da);"></div>
+            <div class="relative flex items-center gap-3 px-6 py-4 rounded-xl transition-all duration-300 group-hover:scale-105" style="background: rgba(26, 31, 46, 0.5); border: 1px solid var(--border-primary); backdrop-filter: blur(10px);">
+              <svg class="w-7 h-7 text-indigo-400 transition-transform duration-300 group-hover:scale-110" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0 12.64 12.64 0 0 0-.617-1.25.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057 19.9 19.9 0 0 0 5.993 3.03.078.078 0 0 0 .084-.028c.462-.63.874-1.295 1.226-1.994a.076.076 0 0 0-.041-.106 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 1-.008-.128 10.2 10.2 0 0 0 .372-.292.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.198.373.292a.077.077 0 0 1-.006.127 12.299 12.299 0 0 1-1.873.892.077.077 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028 19.839 19.839 0 0 0 6.002-3.03.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03z"/>
+              </svg>
+              <span class="text-sm font-semibold transition-colors duration-300" style="color: var(--text-secondary);">Discord</span>
+            </div>
           </div>
         </div>
       </div>
